--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8081
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.mapping.auto-index-creation=true
 spring.data.mongodb.mapping.use-type-information=false
+spring.elasticsearch.uris=https://localhost:9200
